Add Forget password module

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
 DatabaseUrl=mongodb+srv://saimghafoor2649:saimghafoor2649@cluster0.wtlei.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+EMAIL_USERNAME=saimghafoor2649@gmail.com
+EMAIL_PASSWORD=ovvs oeow ydee eght
